"""
Rocq 9 formal verification proofs for ASIL D qualification

This directory contains mechanized correctness proofs that:
1. WebAssembly semantics are correctly implemented
2. ARM semantics are correctly modeled
3. Compilation transformations preserve semantics
4. End-to-end compiler correctness (WASM instruction -> ARM instruction)

Proof status: 23 .v files, ~236 theorems, covering all 151 WASM Core 1.0 operations

Build: bazel build //coq:correctness_complete
Test:  bazel test //coq:verify_proofs
"""

package(default_visibility = ["//visibility:public"])

load("@rules_rocq_rust//rocq:defs.bzl", "rocq_library", "rocq_proof_test")

# All Rocq source files (for genrule/validation)
filegroup(
    name = "rocq_sources",
    srcs = glob(["**/*.v"]),
)

# ─── Foundation ───────────────────────────────────────────────────────────────

rocq_library(
    name = "base",
    srcs = ["Synth/Common/Base.v"],
    include_path = "Synth",
)

# Integers and StateMonad both depend on Base but not on each other
rocq_library(
    name = "common",
    srcs = [
        "Synth/Common/Integers.v",
        "Synth/Common/StateMonad.v",
    ],
    include_path = "Synth",
    deps = [":base"],
)

# ─── ARM chain ────────────────────────────────────────────────────────────────
# Each file imports the previous: State → Instructions → Semantics → Refinement

rocq_library(
    name = "arm_state",
    srcs = ["Synth/ARM/ArmState.v"],
    include_path = "Synth",
    deps = [":base", ":common"],
)

rocq_library(
    name = "arm_instructions",
    srcs = ["Synth/ARM/ArmInstructions.v"],
    include_path = "Synth",
    deps = [":base", ":common", ":arm_state"],
)

rocq_library(
    name = "arm_semantics",
    srcs = ["Synth/ARM/ArmSemantics.v"],
    include_path = "Synth",
    deps = [":base", ":common", ":arm_state", ":arm_instructions"],
)

rocq_library(
    name = "arm_flag_lemmas",
    srcs = ["Synth/ARM/ArmFlagLemmas.v"],
    include_path = "Synth",
    deps = [":arm_semantics"],
)

# VCR-ISA-001 (#242): Sail/ASL-derived semantics bridge — the AArch32
# integer core (AddWithCarry family ADD/ADDS/CMP/SUB/SUBS/CMN/RSB/ADC/SBC,
# flag-free ALU AND/ORR/EOR/MVN, LSL/LSR/ASR/ROR imm+reg via Shift_C,
# MOV/MOVW/MOVT) transcribed from rems-project/sail-arm with line-level
# provenance, proven ≡ ArmSemantics.v on registers + NZCV.
rocq_library(
    name = "sail_arm_bridge",
    srcs = ["Synth/ARM/SailArmBridge.v"],
    include_path = "Synth",
    deps = [":base", ":common", ":arm_state", ":arm_instructions", ":arm_semantics"],
)

rocq_library(
    name = "arm_refinement",
    srcs = ["Synth/ARM/ArmRefinement.v"],
    include_path = "Synth",
    deps = [":arm_semantics"],
)

# ─── WASM chain ───────────────────────────────────────────────────────────────
# Each file imports the previous: Values → Instructions → Semantics

rocq_library(
    name = "wasm_values",
    srcs = ["Synth/WASM/WasmValues.v"],
    include_path = "Synth",
    deps = [":base", ":common"],
)

rocq_library(
    name = "wasm_instructions",
    srcs = ["Synth/WASM/WasmInstructions.v"],
    include_path = "Synth",
    deps = [":base", ":common", ":wasm_values"],
)

rocq_library(
    name = "wasm_semantics",
    srcs = ["Synth/WASM/WasmSemantics.v"],
    include_path = "Synth",
    deps = [":base", ":common", ":wasm_values", ":wasm_instructions"],
)

# ─── Compilation ──────────────────────────────────────────────────────────────
# Bridges ARM and WASM: imports ArmInstructions + WasmSemantics (not ArmSemantics)

rocq_library(
    name = "compilation",
    srcs = ["Synth/Synth/Compilation.v"],
    include_path = "Synth",
    deps = [
        ":base",
        ":common",
        ":arm_state",
        ":arm_instructions",
        ":wasm_values",
        ":wasm_instructions",
        ":wasm_semantics",
    ],
)

# Tactics depends on Compilation + ArmSemantics + ArmFlagLemmas
rocq_library(
    name = "tactics",
    srcs = ["Synth/Synth/Tactics.v"],
    include_path = "Synth",
    deps = [
        ":base",
        ":common",
        ":arm_state",
        ":arm_instructions",
        ":arm_semantics",
        ":arm_flag_lemmas",
        ":wasm_values",
        ":wasm_instructions",
        ":wasm_semantics",
        ":compilation",
    ],
)

# ─── Correctness proofs ──────────────────────────────────────────────────────
# Split by dependency: some need Tactics, some don't.
# Files within each group don't import each other.

_CORRECTNESS_FULL_DEPS = [
    ":base",
    ":common",
    ":arm_state",
    ":arm_instructions",
    ":arm_semantics",
    ":wasm_values",
    ":wasm_instructions",
    ":wasm_semantics",
    ":compilation",
]

# Group A: depend on Compilation + ArmSemantics (no Tactics)
rocq_library(
    name = "correctness_core",
    srcs = [
        "Synth/Synth/Correctness.v",
        "Synth/Synth/CorrectnessSimple.v",
        "Synth/Synth/CorrectnessF32.v",
        "Synth/Synth/CorrectnessF64.v",
        "Synth/Synth/CorrectnessMemory.v",
        "Synth/Synth/CorrectnessI64Comparisons.v",
    ],
    include_path = "Synth",
    deps = _CORRECTNESS_FULL_DEPS,
)

# Group B: depend on Tactics (which transitively provides Compilation)
rocq_library(
    name = "correctness_tactics",
    srcs = [
        "Synth/Synth/CorrectnessI32.v",
        "Synth/Synth/CorrectnessI64.v",
        "Synth/Synth/CorrectnessConversions.v",
    ],
    include_path = "Synth",
    deps = _CORRECTNESS_FULL_DEPS + [":tactics", ":arm_flag_lemmas"],
)

# VCR-SEL-001 pilot: register-polymorphic i32 binop lowering (go/abandon measurement)
rocq_library(
    name = "vcr_sel_pilot",
    srcs = ["Synth/Synth/VcrSelPilot.v"],
    include_path = "Synth",
    # :tactics transitively requires ArmFlagLemmas; the Rocq loadpath needs it
    # listed directly (matches correctness_tactics) — a transitive dep is not
    # enough for the -Q path. Omitting it builds locally off a stale cache but
    # fails CI's hermetic build ("Cannot find library Synth.ARM.ArmFlagLemmas").
    deps = _CORRECTNESS_FULL_DEPS + [":tactics", ":arm_flag_lemmas"],
)

# VCR-SEL-001 increment 1: the WIRED rule table's Rocq obligations — one
# universally-quantified T1 theorem per rule in
# crates/synth-synthesis/src/sel_dsl (naming 1:1: rule_X <-> rule_X_correct).
# Coverage-gated by :vcr_sel_rules_coverage below.
rocq_library(
    name = "vcr_sel_rules",
    srcs = ["Synth/Synth/VcrSelRules.v"],
    include_path = "Synth",
    # :correctness_tactics provides CorrectnessI64 — increment 3's i64 pair
    # theorems import its halves-distribute combine lemmas rather than
    # duplicating them.
    deps = _CORRECTNESS_FULL_DEPS + [
        ":tactics",
        ":arm_flag_lemmas",
        ":correctness_tactics",
    ],
)

# VCR-SEL-001 expansion tier (#242): the binary I64SetCond family proven
# against the encoder's ACTUAL dual-precision expansion chains
# (CMP/SBCS/MOVcc, CMP/CMPEQ/MOVcc from arm_encoder.rs) — no
# i64_setcond_bits axiom. Rests on the round-3 SailArmBridge anchors
# (sail_bridge_sbcs_reg / sail_bridge_cmp_cond_reg).
rocq_library(
    name = "vcr_sel_expansion",
    srcs = ["Synth/Synth/VcrSelExpansion.v"],
    include_path = "Synth",
    deps = [
        ":base",
        ":common",
        ":arm_state",
        ":arm_instructions",
        ":arm_semantics",
        ":arm_flag_lemmas",
        ":sail_arm_bridge",
    ],
)

# VCR-ISA-001 (#667): the selector rule table's Rocq lowerings GENERATED from
# the shipped sel_dsl::RULES (crates/synth-synthesis) — the same table that
# emits the shipped Rust lowering. Wrapped in `Module Gen` so the cross-check
# below can name both `Gen.rule_X` and the hand-written `rule_X`. Committed +
# pinned up-to-date by the cargo test `rocq_generated_lowering_is_up_to_date`.
rocq_library(
    name = "vcr_sel_rules_generated",
    srcs = ["Synth/Synth/VcrSelRulesGenerated.v"],
    include_path = "Synth",
    deps = [
        ":base",
        ":common",
        ":arm_state",
        ":arm_instructions",
    ],
)

# VCR-ISA-001 (#667) divergence GATE: one `reflexivity` Qed per rule proving the
# GENERATED lowering (Gen.rule_X) equals the HAND-WRITTEN VcrSelRules.rule_X the
# correctness theorems are about. If the shipped selector's sequence for a
# covered op ever drifts from the model, the matching reflexivity stops
# type-checking and this target (part of :verify_proofs) goes red — Coq's kernel
# is the oracle, closing the #682 model-vs-selector divergence at the
# instruction-sequence level. Committed + pinned by the cargo test
# `rocq_gencheck_is_up_to_date`.
rocq_library(
    name = "vcr_sel_rules_gencheck",
    srcs = ["Synth/Synth/VcrSelRulesGenCheck.v"],
    include_path = "Synth",
    # Requiring VcrSelRules pulls its whole transitive loadpath (the rocq rules
    # do not propagate deps automatically), so list the same set vcr_sel_rules
    # carries plus the two new libraries this file names.
    deps = _CORRECTNESS_FULL_DEPS + [
        ":tactics",
        ":arm_flag_lemmas",
        ":correctness_tactics",
        ":vcr_sel_rules",
        ":vcr_sel_rules_generated",
    ],
)

# Master index: imports all correctness proofs
rocq_library(
    name = "correctness_complete",
    srcs = ["Synth/Synth/CorrectnessComplete.v"],
    include_path = "Synth",
    deps = [":correctness_core", ":correctness_tactics"],
)

# ─── Extraction ───────────────────────────────────────────────────────────────

rocq_library(
    name = "extraction",
    srcs = ["Synth/Extraction/CompilerExtract.v"],
    include_path = "Synth",
    deps = [":compilation", ":arm_semantics"],
)

# ─── Tests ────────────────────────────────────────────────────────────────────

rocq_proof_test(
    name = "rocq_proofs",
    deps = [
        ":correctness_complete",
        ":extraction",
        ":arm_refinement",
        ":sail_arm_bridge",
        ":vcr_sel_pilot",
        ":vcr_sel_rules",
        ":vcr_sel_rules_generated",
        ":vcr_sel_rules_gencheck",
        ":vcr_sel_expansion",
    ],
)

# VCR-SEL-001 (#242) coverage gate: every rule in the DSL table
# (coq/vcr_sel_rules.manifest, pinned 1:1 to sel_dsl::RULES by a cargo test)
# must have its 1:1-named theorem in VcrSelRules.v, and the file must carry no
# Admitted/admit — so (with :rocq_proofs compiling it) every rule theorem is
# Qed. A rule without its Qed cannot merge.
sh_test(
    name = "vcr_sel_rules_coverage",
    srcs = ["check_vcr_sel_rules_coverage.sh"],
    args = [
        "$(location Synth/Synth/VcrSelRules.v)",
        "$(location vcr_sel_rules.manifest)",
    ],
    data = [
        "Synth/Synth/VcrSelRules.v",
        "vcr_sel_rules.manifest",
    ],
)

# The name CI runs (`bazel test //coq:verify_proofs`): the full proof
# compilation PLUS the VCR-SEL-001 rule-coverage gate.
test_suite(
    name = "verify_proofs",
    tests = [
        ":rocq_proofs",
        ":vcr_sel_rules_coverage",
    ],
)

# Validate proofs (lightweight — counts Admitted)
genrule(
    name = "validate_proofs",
    srcs = [":rocq_sources"],
    outs = ["validation_report.txt"],
    cmd = """
        echo "Synth Rocq Proof Validation Report" > $@
        echo "==================================" >> $@
        echo "" >> $@
        echo "Source files: $$(echo $(SRCS) | wc -w)" >> $@
        echo "" >> $@
        admitted=$$(grep -l "Admitted" $(SRCS) 2>/dev/null || echo "none")
        echo "Files with Admitted proofs: $$admitted" >> $@
        echo "" >> $@
        theorems=$$(grep -c "Theorem\\|Lemma\\|Corollary" $(SRCS) 2>/dev/null | awk -F: '{s+=$$2} END {print s}')
        echo "Total theorems/lemmas: $$theorems" >> $@
    """,
    tags = ["manual"],
)
