(executable
 (name simple_test)
 (modules BinNums BinPos Datatypes Specif PeanoNat PosDef NatDef BinInt Base Integers List0
          ArmState ArmInstructions WasmValues WasmInstructions ArmSemantics WasmSemantics
          Compilation simple_test)
 (flags (:standard -w -33 -w -27)))

(executable
 (name validation_suite)
 (modules BinNums BinPos Datatypes Specif PeanoNat PosDef NatDef BinInt Base Integers List0
          ArmState ArmInstructions WasmValues WasmInstructions ArmSemantics WasmSemantics
          Compilation validation_suite)
 (flags (:standard -w -33 -w -27)))

(executable
 (name comprehensive_suite)
 (modules BinNums BinPos Datatypes Specif PeanoNat PosDef NatDef BinInt Base Integers List0 Bool
          ArmState ArmInstructions WasmValues WasmInstructions ArmSemantics WasmSemantics
          Compilation comprehensive_suite)
 (flags (:standard -w -33 -w -27)))
