"""
Custom constraint settings and values for Synth targets
"""

package(default_visibility = ["//visibility:public"])

# ARM Cortex-M processor variants
constraint_setting(name = "cortex_variant")

constraint_value(
    name = "cortex_m4",
    constraint_setting = ":cortex_variant",
)

constraint_value(
    name = "cortex_m33",
    constraint_setting = ":cortex_variant",
)

# ARM instruction set variants
constraint_setting(name = "arm_instruction_set")

constraint_value(
    name = "thumbv7em",
    constraint_setting = ":arm_instruction_set",
)

constraint_value(
    name = "thumbv8m",
    constraint_setting = ":arm_instruction_set",
)

# FPU variants
constraint_setting(name = "fpu_variant")

constraint_value(
    name = "fpu_fpv4_sp_d16",
    constraint_setting = ":fpu_variant",
)

constraint_value(
    name = "fpu_fpv5_sp_d16",
    constraint_setting = ":fpu_variant",
)

# RISC-V ISA extensions
constraint_setting(name = "riscv_isa")

constraint_value(
    name = "rv32imac",
    constraint_setting = ":riscv_isa",
)

# WebAssembly features
constraint_setting(name = "wasm_features")

constraint_value(
    name = "wasm_component_model",
    constraint_setting = ":wasm_features",
)

# Safety certification level
constraint_setting(name = "safety_level")

constraint_value(
    name = "asil_d",
    constraint_setting = ":safety_level",
)

constraint_value(
    name = "asil_b",
    constraint_setting = ":safety_level",
)

# Coding standards
constraint_setting(name = "coding_standard")

constraint_value(
    name = "misra_c_2012",
    constraint_setting = ":coding_standard",
)
