"""
Feature flags for conditional compilation
"""

package(default_visibility = ["//visibility:public"])

# Verification features
config_setting(
    name = "with_verification",
    define_values = {
        "verification": "full",
    },
)

config_setting(
    name = "with_coq_proofs",
    define_values = {
        "with_coq_proofs": "true",
    },
)

# ASIL D mode (strict compilation)
config_setting(
    name = "asil_d_mode",
    constraint_values = [
        "//bazel/constraints:asil_d",
    ],
)

# Optimization levels
config_setting(
    name = "opt_build",
    values = {
        "compilation_mode": "opt",
    },
)

config_setting(
    name = "debug_build",
    values = {
        "compilation_mode": "dbg",
    },
)
