[package]
name = "synth-analysis"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "SSA and control flow analysis for the Synth compiler"

[dependencies]
synth-core = { path = "../synth-core" }
anyhow.workspace = true
thiserror.workspace = true
