[package]
name = "synth-backend-awsm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "aWsm backend integration for the Synth compiler"

[dependencies]
synth-core = { path = "../synth-core" }
anyhow.workspace = true
thiserror.workspace = true
