[package]
name = "synth-backend"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "ARM encoder, ELF builder, vector table, linker scripts, and MPU configuration"

[features]
default = ["arm-cortex-m"]
arm-cortex-m = ["synth-synthesis"]

[dependencies]
synth-core = { path = "../synth-core", version = "0.11.3" }
synth-synthesis = { path = "../synth-synthesis", version = "0.11.3", optional = true }
anyhow.workspace = true
thiserror.workspace = true
