[package]
name = "synth-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core types, error handling, and backend trait for the Synth compiler"

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
anyhow.workspace = true
wasmparser.workspace = true

[dev-dependencies]
wat.workspace = true
